# rdb-mhc

./: .gitignore  ReadMe.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: npm-publish.yml
docs/: GOALS-METAHUB.md  GOALS.md
mh-backend/: .gitignore  README.md  main.py  pyproject.toml
mh-backend/metahub/: main.py
mh-backend/metahub/api/: clients.py  node_registration.py  tags.py
mh-backend/metahub/db/: connection.py  queries.py  schema.sql
mh-backend/metahub/models/: clients.py  nodes.py  tags.py
mh-backend/metahub/services/: tc_client.py
mh-frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mh-frontend/src/: App.svelte  index.ts  main.ts  modal-fix.css  router.ts  schema.d.ts  schema.ts
mh-frontend/src/lib/: TagInfo.svelte  TagsGraph.svelte  TagsSelector.svelte
mh-frontend/src/pages/: ClientAdmin.svelte  ClientList.svelte  MainPage.svelte  RegisteredNodes.svelte
tc-backend/: .gitignore  README.md  main.py  pyproject.toml
tc-backend/tc/: main.py
tc-backend/tc/api/: metahub.py  node_op.py  node_push.py  node_typed.py
tc-backend/tc/db/: 00-base-schema.sql  01-rdb-schema.sql  connection.py  schema.sql
tc-backend/tc/models/: __init__.py  typed_node.py
tc-backend/tc/services/: metahub_client.py
tc-frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tc-frontend/public/: env.js
tc-frontend/src/: App.svelte  index.ts  router.ts  schema.d.ts
tc-frontend/src/interop/: PushDialog.svelte
tc-frontend/src/lib/: NewResource.svelte  ResourceItem.svelte  (+2 more)
(+11 files in other folders)
