[project]
name = "miz-metahub"
version = "0.0.1a1"
description = "MetaHub for RDB tag selection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metahub"]