[project]
name = "miz-tc"
version = "0.0.1a0"
description = "TemplateClient for RDB resource browsing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tc"]